--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet"  href="/node_modules/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet"  href="/node_modules/bootstrap-icons/font/bootstrap-icons.css"/>
+    <link rel="stylesheet"  href="/node_modules/bootstrap-icons/icons/bootstrap-icons.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <title>Vite + TS</title>
   </head>
   <body>
