add function to delete tags

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet"  href="/node_modules/bootstrap-icons/icons/bootstrap-icons.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="/node_modules/jquery/dist/jquery.slim.min.js"></script>
     <title>Vite + TS</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.tsx"></script>
-    
     
   </body>
 </html>
